<resources>
    <string name="app_name">Kidedvisor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_of_reviews"><u>199 отзывов</u></string>
    <string name="schedule"><u>Расписание</u></string>
    <string name="age">Возраст</string>
    <string name="branch">Направление</string>
    <string name="city">Город</string>
    <string name="city_hint">Например, Москва</string>
    <string name="visit_website"><u>Посетить веб-сайт</u></string>
    <string name="show_all"><u>Показать все</u></string>
    <string name="contact_with_owner">Связаться с владельцем секции</string>
    <string name="schedule_clubs">Расписание секций</string>
    <string name="season_tickets">Абонементы</string>
    <string name="tv_request_card_manager"><u>Запросить права на управление карточкой</u></string>
    <string name="unknown_owner">На данный момент мы не знаем, кто владелец секции. Если это вы, сообщите нам.</string>
    <string name="contact">Связаться</string>
    <string name="leave_rating">оставить оценку</string>
    <string name="search_hint">Название секции</string>
    <string name="badge_text">Наш выбор</string>
    <string name="cancel">Отменить</string>
    <string name="popular">Популярные</string>
    <string name="popular_request">Популярные запросы сегодня</string>
    <string name="popular_clubs">Популярные секции</string>
    <string name="filters">Фильтры</string>
    <string name="filter">Фильтр</string>
    <string name="more_detailed">Подробнее</string>
    <string name="my_details">Мои данные</string>
    <string name="profile">Профиль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="profile_delete">Удалить профиль</string>
    <string name="profile_exit">Выйти из профиля</string>
    <string name="user_name">Имя пользователя</string>
    <string name="no_name">Имя не заполнено</string>
    <string name="change_photo">Сменить фото</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_second_name">Введите отчество</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="your_email">Ваша почта</string>
    <string name="name_hint">Анастасия</string>
    <string name="surname_hint">Иванова</string>
    <string name="second_name_hint">Владимировна</string>
    <string name="phone_number_hint">8 (999) 999 99 99</string>
    <string name="email_hint">person@mail.ru</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="register">Зарегистрироваться</string>
    <string name="help">Помощь</string>
    <string name="kidedvisor_details">Подробнее о Kidedvisor</string>
    <string name="send">Отправить</string>
    <string name="write_to_us">Напишите нам</string>
    <string name="text_your_appeal_hint">Текст вашего обращения</string>
    <string name="text_your_message_hint">Текст сообщения</string>
    <string name="if_you_owner">Если вы владелец секции, напишите нам, мы с вами свяжемся в ближайшее время.</string>
    <string name="owner">Владелец:</string>
    <string name="phone_number">Телефон:</string>
    <string name="email">Почта:</string>
    <string name="telegram">Telegram:</string>
    <string name="whatsApp">WhatsApp:</string>
    <string name="website">Веб-сайт:</string>
    <string name="thanks">Спасибо!</string>
    <string name="message_send">Ваше обращение было отправлено.\nМенеджер свяжется с вами\nв ближайшее время.</string>
    <string name="ok">OK</string>
    <string name="dignities">Достоинства</string>
    <string name="disadvantages">Недостатки</string>
    <string name="comment">Комментарий</string>
    <string name="comment_on">Комментировать</string>
    <string name="watch_all">Смотреть все</string>
    <string name="reviews">Отзывы</string>
    <string name="show_first">Показывать сначала</string>
    <string name="action">Действия</string>
    <string name="claim">Жалоба</string>
    <string name="out_of_five">из 5</string>
    <string name="assessment_by_touch">Оценка касанием:</string>
    <string name="write_review">Написать отзыв</string>
    <string name="new_ones_first">Сначала новые</string>
    <string name="specify_reason">Укажите причину</string>
    <string name="first_high_rating">Сначала с высокой оценкой</string>
    <string name="first_low_rating">Сначала с низкой оценкой</string>
    <string name="complain">Пожаловаться</string>
    <string name="share">Поделиться</string>
    <string name="misleading">Введение в заблуждение</string>
    <string name="unacceptable_content">Неприемлемое содержание</string>
    <string name="other_reason">Другая причина</string>
    <string name="detailed_reason">Опишите причину подробнее</string>
    <string name="photo_user_feedbacks">Фотография пользователя</string>
    <string name="from">от</string>
    <string name="before">до</string>
    <string name="rating">Рейтинг</string>
    <string name="apply">Применить</string>
    <string name="not_found_filter"><u>Не нашли нужный фильтр?</u></string>
    <string name="oops">Ой!</string>
    <string name="page_not_exist">Эта страница не существует</string>
</resources>